--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -28,7 +28,7 @@ runs:
           sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
         fi
 
-        packages_needed="("unzip nodejs tar"
+        packages_needed="unzip nodejs tar"
 
         if [ -x "$(command -v apk)" ]; then
           apk add --no-cache $packages_needed
