--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -28,20 +28,20 @@ runs:
           sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
         fi
 
-        # if [ -x "$(command -v apk)" ]; then
-        #   apk add --no-cache $packages_needed
-        # elif [ -x "$(command -v apt-get)" ]; then
-        #   apt-get update
-        #   apt-get install -y unzip
-        # elif [ -x "$(command -v dnf)" ]; then
-        #   dnf install -y $packages_needed
-        # elif [ -x "$(command -v yum)" ]; then
-        #   yum -y update
-        #   yum install -y $packages_needed
-        # else
-        #   echo "No package manager found">&2
-        #   exit 1
-        # fi
+        if [ -x "$(command -v apk)" ]; then
+          apk add --no-cache nodejs unzip
+        elif [ -x "$(command -v apt-get)" ]; then
+          apt-get update
+          apt-get install -y nodejs unzip
+        elif [ -x "$(command -v dnf)" ]; then
+          dnf install -y nodejs unzip
+        elif [ -x "$(command -v yum)" ]; then
+          yum -y update
+          yum install -y nodejs unzip
+        else
+          echo "No package manager found">&2
+          exit 1
+        fi
 
     # Install Terraform
     - name: Install Terraform
