--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -34,7 +34,10 @@ runs:
           apt-get update
           apt-get install -y nodejs unzip tar gzip
         elif [ -x "$(command -v dnf)" ]; then
-          dnf install -y nodejs:20/common unzip tar gzip
+          dnf module -y reset nodejs
+          dnf module -y enable nodejs:20
+          dnf module install -y nodejs:20/common
+          dnf install -y unzip tar gzip
         elif [ -x "$(command -v yum)" ]; then
           yum -y update
           yum install -y nodejs unzip tar gzip
