--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -1,5 +1,5 @@
 name: 'Terraform Module Initialization'
-description: 'Tests the Terraform module.'
+description: 'Installs and initializes the desired Terraform version.'
 
 inputs:
   tf_path:
@@ -26,6 +26,7 @@ runs:
         if test -f "/etc/centos-release"; then
           sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
           sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+          # CentOS also needs to be special and have the nodejs setup script run to use the right version
           curl -fsSL https://rpm.nodesource.com/setup_22.x | bash -
         fi
 
