--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -1,5 +1,5 @@
 name: 'Terraform Module Initialization'
-description: 'Tests the Terraform module.'
+description: 'Installs and initializes the desired Terraform version.'
 
 inputs:
   tf_path:
@@ -16,68 +16,40 @@ runs:
       run: |
         echo "${{ toJSON(matrix) }}"
 
-    - name: Install Terraform (Alpine)
-      if: startsWith(matrix.container.image, 'alpine:')
+    # If we're running in a container, we have to install some additional
+    # packages in order to install Terraform.
+    - name: Install Packages
+      if: matrix.container.image != ''
       shell: sh
       run: |
-        apk add --no-cache git
-        wget https://releases.hashicorp.com/terraform/${{ matrix.terraform_version }}/terraform_${{ matrix.terraform_version }}_linux_amd64.zip
-        unzip terraform_${{ matrix.terraform_version }}_linux_amd64.zip
-        mv terraform /usr/bin/terraform
-        
-    - name: Install Terraform (Redhat)
-      if: startsWith(matrix.container.image, 'redhat/')
-      shell: sh
-      run: |
-        yum -y update
-        yum install -y yum-utils git
-        yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
-        yum -y install terraform-${{ matrix.terraform_version }}
+        # CentOS needs a mirror added
+        if test -f "/etc/centos-release"; then
+          sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+          sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+          # CentOS also needs to be special and have the nodejs setup script run to use the right version
+          curl -fsSL https://rpm.nodesource.com/setup_22.x | bash -
+        fi
 
-    - name: Install Terraform (CentOS)
-      if: startsWith(matrix.container.image, 'centos:')
-      shell: sh
-      run: |
-        sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
-        sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
-        yum -y update
-        yum install -y yum-utils git
-        yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo
-        yum -y install terraform-${{ matrix.terraform_version }}
+        if [ -x "$(command -v apk)" ]; then
+          apk add --no-cache nodejs unzip tar gzip
+        elif [ -x "$(command -v apt-get)" ]; then
+          apt-get update
+          apt-get install -y nodejs unzip tar gzip
+        elif [ -x "$(command -v yum)" ]; then
+          yum -y update
+          yum install -y nodejs unzip tar gzip
+        elif [ -x "$(command -v dnf)" ]; then
+          dnf install -y nodejs unzip tar gzip
+        else
+          echo "No package manager found">&2
+          exit 1
+        fi
 
-    - name: Install Terraform (Amazon Linux)
-      if: startsWith(matrix.container.image, 'amazonlinux:')
-      shell: sh
-      run: |
-        yum install -y yum-utils git
-        yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
-        yum -y install terraform-${{ matrix.terraform_version }}
-
-    - name: Install Terraform (Fedora)
-      if: startsWith(matrix.container.image, 'fedora:')
-      shell: sh
-      run: |
-        dnf install -y dnf-plugins-core git
-        dnf config-manager --add-repo https://rpm.releases.hashicorp.com/fedora/hashicorp.repo
-        dnf -y install terraform-${{ matrix.terraform_version }}
-
-    - name: Install Terraform (Ubuntu)
-      if: startsWith(matrix.container.image, 'ubuntu:')
-      shell: sh
-      run: |
-        apt-get update
-        apt-get install -y curl gnupg lsb-release software-properties-common git
-        curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
-        apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-        apt-get update
-        apt-get install -y terraform=${{ matrix.terraform_version }}
-
-    # Installation for when we're not running in a container
+    # Install Terraform
     - name: Install Terraform
-      uses: hashicorp/setup-terraform@v2
-      if: matrix.container.image == ''
+      uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: ${{ inputs.terraform_version }}
+        terraform_version: ${{ matrix.terraform_version }}
 
     # Checkout the repository
     - name: Checkout
