--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -31,15 +31,15 @@ runs:
         fi
 
         if [ -x "$(command -v apk)" ]; then
-          apk add --no-cache nodejs unzip tar gzip
+          apk add --no-cache nodejs unzip tar gzip git
         elif [ -x "$(command -v apt-get)" ]; then
           apt-get update
-          apt-get install -y nodejs unzip tar gzip
+          apt-get install -y nodejs unzip tar gzip git
         elif [ -x "$(command -v yum)" ]; then
           yum -y update
-          yum install -y nodejs unzip tar gzip
+          yum install -y nodejs unzip tar gzip git
         elif [ -x "$(command -v dnf)" ]; then
-          dnf install -y nodejs unzip tar gzip
+          dnf install -y nodejs unzip tar gzip git
         else
           echo "No package manager found">&2
           exit 1
