--- a/apply-failure/action.yml
+++ b/apply-failure/action.yml
@@ -19,7 +19,6 @@ runs:
 
     # Apply the Terraform config
     - name: Terraform Apply
-      if: matrix.shells != 'true'
       id: apply
       continue-on-error: true
       shell: sh
@@ -28,7 +27,7 @@ runs:
 
     # Ensure that the outcome was a failure
     - name: Check for Failure
-      if: matrix.shells != 'true' && steps.apply.outcome != 'failure'
+      if: steps.apply.outcome != 'failure'
       shell: sh
       run: |
         echo "Apply had a status other than the expected failure: ${{ steps.apply.outcome }}"
