--- a/matrix/action.yml
+++ b/matrix/action.yml
@@ -36,7 +36,7 @@ runs:
       id: images
       shell: bash
       run: |
-        images='["alpine:latest", "redhat/ubi9:latest", "fedora:latest", "centos:latest", "ubuntu:latest", "amazonlinux:latest"]'
+        images='["alpine:latest", "redhat/ubi9:latest", "fedora:latest", "centos:latest", "amazonlinux:latest"]'
         IFS=',' read -r -a additional_images <<< $(echo "${{ inputs.additional_images }}" | sed 's/[[:blank:]]//g')
         for image in "${additional_images[@]}"; do
             images=$(echo "$images" | jq -r ". + [\"$image\"]")
